fix spacing

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -202,7 +202,11 @@
 }
 
 section {
-  margin-bottom: 250px;
+  margin-bottom: 100px;
+}
+
+.section-space {
+  margin-bottom: 200px;
 }
 
 .bottom-line {
